--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,11 +11,17 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "jstz": "^2.1.1",
+    "moment-timezone": "^0.5.28",
     "react": "^16.13.1",
+    "react-datepicker": "^2.14.1",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
