--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-share": "^4.1.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5"
   },
@@ -44,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
