--- a/webapp/public/manifest.json
+++ b/webapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Qioo",
+  "name": "Discover and Share your Favorite Online Events",
   "icons": [
     {
       "src": "favicon.ico",
